[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculus-ai"
version = "0.1.0"
description = "Oculus AI — The Stripe of AI Visibility. Measure and optimize your AI recommendability."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Oculus AI", email = "hello@oculus-ai.dev"},
]
keywords = [
    "ai", "visibility", "recommendability", "llm", "seo", "geo",
    "chatgpt", "claude", "perplexity", "gemini", "api",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://oculus-ai.dev"
Documentation = "https://docs.oculus-ai.dev"
Repository = "https://github.com/hizanamihizanagi-png/THRESHOLD_repo"
Issues = "https://github.com/hizanamihizanagi-png/THRESHOLD_repo/issues"

[tool.setuptools.packages.find]
include = ["oculus_sdk*"]
